--- a/public/index.css
+++ b/public/index.css
@@ -1,8 +1,3 @@
-.cc {
-    border: solid 1px black;
-    width: 60px;
-    height: 60px;
-}
 canvas {
     image-rendering: optimizeSpeed;
     /* Legal fallback */
@@ -99,6 +94,16 @@ code {
     text-align: center;
     padding-top: 2px;
 }
+.cc {
+    border: solid 1px black;
+    width: 60px;
+    height: 60px;
+}
 .selected{
-	border: solid 1px red;
+	border: solid 1px white;
+}
+.ccContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
