--- a/public/index.css
+++ b/public/index.css
@@ -23,7 +23,7 @@ body {
 
 }
 main{
-    margin: 0 auto;
+    margin: 1em;
     width: 600px;
 }
 .nav{
@@ -99,11 +99,19 @@ code {
     width: 60px;
     height: 60px;
 }
-.selected{
+.cc.selected{
 	border: solid 1px white;
+}
+.selected{
+	border: solid 1px #FF6666;
 }
 .ccContainer{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#result{
+    height: 300px; width: 300px; position: absolute; right: 0; top:0;
+    background: #333;
 }
